--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -1,4 +1,15 @@
 .screenStyle {
   width: 100%;
   height: 70px;
+  background: black;
+  color: white;
+  position:relative;
+  margin: 5px;
+}
+
+.valueStyle {
+  position:absolute;
+  bottom:0;
+  right:0;
+  font-size: 35px;
 }
