--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-*{
-  margin: 10px;
-  padding: 0;
+.App {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%; /* Make sure to fill all the space */
+  height: 100%; /* Make sure to fill all the space */
+  background-color: black;
 }
