--- a/src/components/Panel/Button.css
+++ b/src/components/Panel/Button.css
@@ -1,10 +1,25 @@
 .buttonStyle {
-  background: rgba(255, 166, 0, 0.884);
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
+  flex: 1 1 10px;
+  background-color: rgba(105, 105, 105, 0.568);
   text-align: center;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 15%;
+  font-size: 45px;
+  border-radius: 50%;
+  margin: 10px 10px;
+  padding: 0px;
+  height: 85px;
+  border: none;
+  color: white;
+}
+
+.wide { /* for 0 button */
+  flex: 2 2 20px;
+  border-radius: 50px 50px 50px 50px;
+}
+
+.gray {
+  background-color: rgb(172, 171, 171);
+  color: black;
+}
+.orange {
+  background-color: rgb(255, 136, 0);
 }
