--- a/src/components/Panel/PanelRow.css
+++ b/src/components/Panel/PanelRow.css
@@ -1,5 +1,9 @@
 .panelRowStyle {
   display: flex;
+  flex: 1;
   flex-direction: row;
-  flex-grow: 1;
+  background: black;
+  border: none;
 }
+
+
