--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -1,15 +1,19 @@
 .screenStyle {
-  width: 100%;
-  height: 100px;
+  flex: 1;
   background: black;
   color: white;
   position:relative;
+  text-align: right;
   margin: 5px;
+  
 }
 
 .valueStyle {
   position:absolute;
   bottom:0;
   right:0;
-  font-size: 35px;
+  font-size: 50px;
+  padding-bottom: 15px;
+  padding-right: 10px;
+  word-break: break-all;
 }
